Finally figured out how to properly use media queries to avoid my sections from overlapping

--- a/assets/style.css
+++ b/assets/style.css
@@ -188,6 +188,7 @@ nav a {
 }
 /*------Work Cards--------*/
 
+
 #work{
     background: linear-gradient(10deg, #4d5061,#192132);
     height: 100vh;
@@ -197,9 +198,10 @@ nav a {
 
 .cards{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(380px,1fr));
+    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
     padding: 20px;
     grid-gap: 3rem;
+   
 }
 .card{
     background-color: #1c1b29;
@@ -291,7 +293,91 @@ nav a {
 
 /*--------Contact-----------*/
 
-#contact{
+
+  
+ 
+  
+  
+
+  @media screen and (max-width: 768px) {
+    .container,
+    .container:first-child {
+      flex-basis: 100%;
+    }
+    
+  
+    .container:first-child {
+      min-height: 150px;
+    }
+  
+    .hero-banner {
+      justify-content: center;
+      text-align: center;
+    }
+   
     
     
-}
+  
+   
+  }
+  
+
+  @media screen and (max-width: 980px) {
+    header {
+      padding: 0 0 10px 0;
+      justify-content: center;
+      text-align: center;
+    }
+  
+    header h1 {
+      width: 100%;
+      padding: 5px;
+      margin-bottom: 10px;
+      font-size: 10vw;
+    }
+  
+    header nav {
+      justify-content: center;
+    }
+    
+    
+  
+  
+    
+  }
+  @media screen and (min-width: 1024px) {
+    
+    #work{
+        height: 90%;
+     }
+    
+  
+  
+    
+  }
+  @media screen and (min-width: 768px) and (max-width:1023px) {
+    
+    #work{
+        height: 150%;
+     }
+    
+  
+  
+    
+  }
+  @media screen and (max-width: 767px) {
+    
+    #work{
+        height: 280%;
+     }
+    
+  
+  
+    
+  }
+  
+ 
+  
+  
+  
+ 
